Fixes spacing issue between pagination and footer

--- a/assets/scss/inadmin/_pagination.scss
+++ b/assets/scss/inadmin/_pagination.scss
@@ -4,6 +4,7 @@ $pagination-border-radius: 5px;
   display: flex;
   list-style-type: none;
   padding-left: 15px;
+  margin-bottom: 50px;
 
   .page-item {
     display: table-cell;
